log/build_2025-03-21_12-38-46/robot_control/stderr.log
  File "/home/mo/Thesis/install/robot_control/lib/python3.8/site-packages/FC/FC_hook_geometrics_handler_for_trajectory.py", line 344
    pose_ref_frame='work'
    ^
SyntaxError: invalid syntax

